19547
This caused me quite the literal headache today:
```scala
class S[_]
class T[_]

case class B(x: Int)
object B {
  def makeST = (new S[B], new T[B])
  implicit val (s,t): (S[B],T[B]) = makeST
}

object A { implicitly[T[B]] }
```
The code above compiles, but if you swap the order of A and B,  it no longer will:
```scala
class S[_]
class T[_]

object A { implicitly[T[B]] }

case class B(x: Int)
object B {
  def makeST = (new S[B], new T[B])
  implicit val (s,t): (S[B],T[B]) = makeST
}
```
```
<console>:11: error: could not find implicit value for parameter e: T[B]
         implicitly[T[B]]
                   ^
```
Very sad indeed.  

The tuple has something to with it; this is ok:
```scala
class S[_]
class T[_]

object A { implicitly[T[B]] }

case class B(x: Int)
object B {
  def makeST = (new S[B], new T[B])
  implicit val s: S[B] = makeST._1
  implicit val t: T[B] = makeST._2
}
```
